# ImgModalDB

./: .gitignore  AGENTS.md  Dev.md  global_config.json  pyproject.toml
api/: __init__.py  app.py
config/: __init__.py  settings.py
core/: __init__.py
core/embedders/: __init__.py  base.py  clip_embedder.py  jina_embedder.py
core/indexing/: __init__.py  captions.py  index_builder.py  scanner.py
core/models/: __init__.py  domain.py
core/search/: __init__.py  pipeline.py  strategies.py
core/tasks/: __init__.py  base.py  hash_tasks.py  registry.py
core/vector_store/: __init__.py  base.py  faiss_store.py
core/workspaces/: __init__.py  manager_v2.py  workspace_manager.py
gui/: __init__.py  databases_tab.py  main_window.py  view_models.py
gui/widgets/: image_grid.py  image_tile.py  range_slider.py
scripts/: __init__.py  index_images.py  quick_search_demo.py
storage/db/: .gitkeep
storage/images/: .gitkeep
storage/indexes/: .gitkeep
